
[metadata]
name = csv-diff-python2-blue-monk
version = 1.0.0
author = blue-monk
author_email = blue.monk.487@gmail.com
description = A simple command-line tool to see the difference between two CSV files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blue-monk/csv-diff-python2
project_urls =
    Bug Tracker = https://github.com/blue-monk/csv-diff-python2/issues
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src
